Hooked up Arduino launch to new build configs.
Wow, this is slick. Launch delegate gets upload command from
build config.

Change-Id: I779625407877610f1405a48eab851b25d886165f